# pluggedin-random-number-generator-mcp-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  SMITHERY.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: bump-version.py  publish.sh  run-inspector.py
src/pluggedin_random_number_generator_mcp/: __init__.py  __main__.py  server.py
tests/: test_server.py
